--- a/app/src/main/res/layout/fragment_instruction_screen.xml
+++ b/app/src/main/res/layout/fragment_instruction_screen.xml
@@ -11,22 +11,35 @@
     <TextView
             android:text="@string/instruction_one"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView3"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="128dp"
-            app:layout_constraintHorizontal_bias="0.491"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/textView3"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="128dp"
+            style="@style/text_view_style"
+            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
     <TextView
             android:text="@string/instruction_one"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView4"
-            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/textView4"
+            android:layout_marginTop="96dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            style="@style/text_view_style"
+            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
     <Button
             android:text="@string/welcome_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/instruction_btn"
-            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
-            android:fontFamily="@font/bitter"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/instruction_btn"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            style="@style/button_style"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
