--- a/app/src/main/res/layout/fragment_new_shoe_details_screen.xml
+++ b/app/src/main/res/layout/fragment_new_shoe_details_screen.xml
@@ -14,38 +14,57 @@
         <TextView
                 android:text="@string/company_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/company_view"
+                android:layout_height="wrap_content"
+                android:id="@+id/company_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_company"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="24dp"
+                style="@style/text_view_style"
+        />
         <TextView
                 android:text="@string/description_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/description_view"
+                android:layout_height="wrap_content"
+                android:id="@+id/description_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_description"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="24dp"
+                style="@style/text_view_style"
+        />
         <TextView
                 android:text="@string/size_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/size_view"
+                android:layout_height="wrap_content"
+                android:id="@+id/size_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_size"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="24dp"
+                style="@style/text_view_style"
+        />
         <TextView
                 android:text="@string/shoe_name_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/shoe_name_view"
+                android:layout_height="wrap_content"
+                android:id="@+id/shoe_name_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_name"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="24dp"
+                style="@style/text_view_style"
+        />
         <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/edit_text_shoe_name"
-                android:hint="@string/shoe_name_hint" android:layout_marginEnd="24dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/barrier2"
-                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"
+                android:hint="@string/shoe_name_hint"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/barrier2"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="100dp"
                 app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_view"
+                style="@style/edit_text_style"
         />
         <EditText
                 android:layout_width="0dp"
@@ -54,10 +73,14 @@
                 android:ems="10"
                 android:id="@+id/edit_text_shoe_company"
                 android:hint="@string/company_hint"
-                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_name" android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_name"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="16dp"
-                app:layout_constraintStart_toEndOf="@id/barrier2"/>
+                app:layout_constraintStart_toEndOf="@id/barrier2"
+                style="@style/edit_text_style"
+        />
         <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -65,10 +88,14 @@
                 android:ems="10"
                 android:id="@+id/edit_text_shoe_size"
                 android:hint="@string/shoe_size_hint"
-                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_company" android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_company"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="16dp"
-                app:layout_constraintStart_toEndOf="@id/barrier2"/>
+                app:layout_constraintStart_toEndOf="@id/barrier2"
+                style="@style/edit_text_style"
+        />
         <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -76,17 +103,25 @@
                 android:ems="10"
                 android:id="@+id/edit_text_shoe_description"
                 android:hint="@string/description_hint"
-                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_size" android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_size"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="16dp"
-                app:layout_constraintStart_toEndOf="@id/barrier2"/>
+                app:layout_constraintStart_toEndOf="@id/barrier2"
+                style="@style/edit_text_style"
+        />
         <Button
                 android:text="@string/save_btn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/save_btn"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"
-                android:backgroundTint="@color/colorPrimary" android:textColor="#FFFFFF"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/save_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="32dp"
+                style="@style/button_style"
+                />
         <Button
                 android:text="@string/cancel_btn"
                 android:layout_width="wrap_content"
@@ -95,24 +130,27 @@
                 app:layout_constraintBaseline_toBaselineOf="@+id/save_btn"
                 app:layout_constraintEnd_toStartOf="@+id/save_btn"
                 android:layout_marginEnd="16dp"
-                android:textColor="@color/colorPrimary"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                app:strokeWidth="2dp"
-                app:strokeColor="@color/colorPrimary"
+                style="@style/outline_button_style"
         />
         <androidx.constraintlayout.widget.Barrier
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/barrier2" app:barrierDirection="end"
+                android:id="@+id/barrier2"
+                app:barrierDirection="end"
                 app:constraint_referenced_ids="company_view,description_view,size_view,shoe_name_view"
                 tools:layout_editor_absoluteX="411dp"/>
         <TextView
                 android:text="@string/new_shoe_title_text"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/new_shoe_title_view"
-                android:textStyle="bold" android:textAlignment="center"
-                android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:textSize="24sp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/new_shoe_title_view"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="32dp"
+                style="@style/sub_title_style"
+        />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
