--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -16,8 +16,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="24dp"
                 android:src="@drawable/ic_plus_white"
-                app:tint="@android:color/white"
-                app:backgroundTint="@color/colorPrimary"
+                style="@style/fab_btn_style"
         />
 
         <ScrollView
