--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -13,11 +13,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView"
-                android:textColor="@android:color/black" android:textSize="30sp" android:fontFamily="@font/bitter"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/textView2"
-                android:textAlignment="center"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/textView2"
+                style="@style/title_style"
+        />
         <Button
                 android:text="@string/welcome_btn"
                 android:layout_width="wrap_content"
@@ -25,18 +26,20 @@
                 android:id="@+id/welcome_btn"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:fontFamily="@font/bitter"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/button_style"
+        />
         <TextView
                 android:text="@string/sub_title_welcome"
                 android:layout_width="379dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
-                android:textAlignment="center"
-                android:textSize="18sp"
-                android:lineSpacingExtra="0sp" android:fontFamily="@font/bitter"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintBottom_toTopOf="@+id/welcome_btn"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/text_view_style"
+        />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
