--- a/app/src/main/res/layout/my_custom_view.xml
+++ b/app/src/main/res/layout/my_custom_view.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Shoe name here"
-            android:textSize="18sp"
+            style="@style/custom_text_view_style"
             android:layout_marginBottom="8dp"
     />
 
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Size here"
-            android:textSize="18sp"
+            style="@style/custom_text_view_style"
             android:layout_marginBottom="8dp"
     />
 
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Company here"
-            android:textSize="18sp"
+            style="@style/custom_text_view_style"
             android:layout_marginBottom="8dp"
     />
 
@@ -55,6 +55,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Description here"
-            android:textSize="18sp"
+            style="@style/custom_text_view_style"
     />
 </LinearLayout>
