--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00897b</color>
-    <color name="colorPrimaryDark">#005b4f</color>
-    <color name="colorAccent">#4ebaaa</color>
+    <color name="colorPrimary">#616161</color>
+    <color name="colorPrimaryDark">#373737</color>
+    <color name="colorAccent">#ff9800</color>
     <color name="default_color">#f2f2f2</color>
     <color name="default_image">#c4c4c2</color>
     <color name="custom_view_background">#ebebeb</color>
