--- a/app/src/main/res/layout/fragment_login_screen.xml
+++ b/app/src/main/res/layout/fragment_login_screen.xml
@@ -67,7 +67,6 @@
                 app:layout_constraintStart_toEndOf="@id/barrier"
                 android:layout_marginStart="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" android:layout_marginTop="24dp"
                 app:layout_constraintVertical_chainStyle="spread"
                 style="@style/edit_text_style"
@@ -80,9 +79,8 @@
                 android:id="@+id/editTextTextEmailAddress"
                 android:hint="@string/email_hint"
                 app:layout_constraintStart_toEndOf="@id/barrier"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/margin"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintVertical_chainStyle="spread"
                 app:layout_constraintTop_toTopOf="@id/title_view"
                 android:layout_marginTop="132dp"
