--- a/app/src/main/res/layout/fragment_new_shoe_details_screen.xml
+++ b/app/src/main/res/layout/fragment_new_shoe_details_screen.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/company_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_company"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin"
                 style="@style/text_view_style"
         />
         <TextView
@@ -28,7 +28,7 @@
                 android:id="@+id/description_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_description"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin"
                 style="@style/text_view_style"
         />
         <TextView
@@ -38,7 +38,7 @@
                 android:id="@+id/size_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_size"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin"
                 style="@style/text_view_style"
         />
         <TextView
@@ -48,7 +48,7 @@
                 android:id="@+id/shoe_name_view"
                 app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_name"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin"
                 style="@style/text_view_style"
         />
         <EditText
@@ -58,10 +58,10 @@
                 android:ems="10"
                 android:id="@+id/edit_text_shoe_name"
                 android:hint="@string/shoe_name_hint"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="@dimen/margin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/barrier2"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/margin"
                 android:layout_marginTop="100dp"
                 app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_view"
                 style="@style/edit_text_style"
@@ -74,10 +74,10 @@
                 android:id="@+id/edit_text_shoe_company"
                 android:hint="@string/company_hint"
                 app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_name"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginEnd="@dimen/margin"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/margin"
                 app:layout_constraintStart_toEndOf="@id/barrier2"
                 style="@style/edit_text_style"
         />
@@ -89,10 +89,10 @@
                 android:id="@+id/edit_text_shoe_size"
                 android:hint="@string/shoe_size_hint"
                 app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_company"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginEnd="@dimen/margin"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/margin"
                 app:layout_constraintStart_toEndOf="@id/barrier2"
                 style="@style/edit_text_style"
         />
@@ -104,10 +104,10 @@
                 android:id="@+id/edit_text_shoe_description"
                 android:hint="@string/description_hint"
                 app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_size"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginEnd="@dimen/margin"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/margin"
                 app:layout_constraintStart_toEndOf="@id/barrier2"
                 style="@style/edit_text_style"
         />
@@ -118,8 +118,8 @@
                 android:id="@+id/save_btn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="32dp"
+                android:layout_marginEnd="@dimen/margin"
+                android:layout_marginBottom="@dimen/margin"
                 style="@style/button_style"
                 />
         <Button
@@ -129,7 +129,7 @@
                 android:id="@+id/cancel_btn"
                 app:layout_constraintBaseline_toBaselineOf="@+id/save_btn"
                 app:layout_constraintEnd_toStartOf="@+id/save_btn"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/margin"
                 style="@style/outline_button_style"
         />
         <androidx.constraintlayout.widget.Barrier
@@ -146,8 +146,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/new_shoe_title_view"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="@dimen/margin"
+                android:layout_marginEnd="@dimen/margin"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="32dp"
                 style="@style/sub_title_style"
