--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -32,7 +32,7 @@
         />
         <TextView
                 android:text="@string/sub_title_welcome"
-                android:layout_width="379dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -40,6 +40,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 style="@style/text_view_style"
-        />
+                android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
